force-app/main/default/objects/Job_Clinical_Skill__c/Job_Clinical_Skill__c.object-meta.xml
<CustomObject>
    <label>Job_Clinical_Skill</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Job_Clinical_Skill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job_Clinical_Skill</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>