force-app/main/default/objects/Job_Clinical_Skill__c/fields/Job_Posting__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting__c</fullName>
    <label>Job_Posting</label>
    <referenceTo>Job_Posting__c</referenceTo>
    <relationshipLabel>Job_Clinical_Skill</relationshipLabel>
    <relationshipName>Job_Clinical_Skill</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>