force-app/main/default/objects/Job_Clinical_Skill__c/fields/Skill_Level__c.field-meta.xml
<CustomField>
    <fullName>Skill_Level__c</fullName>
    <label>Skill_Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>