force-app/main/default/objects/Job_Clinical_Skill__c/fields/Skill_Name__c.field-meta.xml
<CustomField>
    <fullName>Skill_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Skill_Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>